# my-flo

./: gitcloneflow.sh
callback-gateway/: .gitignore  .gitlab-ci.yml  README.md  package-lock.json  package.json  serverless.yml
cloud-sync/: .gitignore  .gitlab-ci.yml  DockerFile.debug  Dockerfile.build  Makefile  README.md  docker-compose.cluster.yml  docker-compose.debug.yml  docker-compose.yml
flo-active-campaign-tagger/: .gitlab-ci.yml  package-lock.json  package.json  serverless.yml
flo-alarm-dotcom/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile.build  Makefile  README.md  docker-compose.ci.yml  docker-compose.debug.yml  docker-compose.yml
flo-alexa-proxy/: .gitignore  .gitlab-ci.yml  Makefile  README.md  package.json  serverless.ts  tsconfig.json  webpack.config.js
flo-alexa-skill/: .env.json  .gitignore  .gitlab-ci.yml  AccountLinkIntentHandler.js  Makefile  RequestHandler.js  UserInfoIntentHandler.js  alerts.js  builtin.js  config_aws.sh  custom.js  index.js  package-lock.json  package.json  serverless.yml  test.js  waterConsumption.js
flo-android-app/: .gitignore  README.md  build.sh  pubspec.yaml
flo-android-sdk/: README.md  build.gradle  circle.yml  docker-compose.yml  gradle.properties  settings.gradle
flo-api/: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-base  (+6 more)
icd-provisioner/: .dockerignore  .gitignore  README.md  pyproject.toml
icd-provisioner/.github/: pull_request_template.md
icd-provisioner/data/: pynsist_cfg_template.txt
icd-provisioner/docker/: Dockerfile  docker-compose.yml  icd-provisioner
(+5115 files in other folders)
